# stepik-conspect-helper

./: README.md  pyproject.toml
stepik_conspect_helper/: constants.py  main.py
stepik_conspect_helper/stepa/: __init__.py  oauth.py  utils.py
stepik_conspect_helper/stepa_api/: client.py  constants.py  schema.py
stepik_conspect_helper/token_exchanger/: __init__.py  constants.py  server.py  utils.py
stepik_conspect_helper/token_exchanger/templates/: error_page.py  success_page.py
tests/stepa/: test_oauth.py
tests/stepa_api/: test_client.py
tests/token_exchanger/: test_server.py  test_utils.py
