[project]
name = "stepik-conspect-helper"
version = "0.1.0"
description = "Utility to build text based course summaries faster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.12.14",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
